--- a/slides/slide_54.html
+++ b/slides/slide_54.html
@@ -11,9 +11,12 @@
         <p class="notes">Upstream, Greece</p>
         <p><a href="https://twitter.com/psybercity" class="twitter-blue" target="_blank">@psybercity</a></p>
         <p><a href="https://github.com/mandarini" target="_blank">github.com/mandarini</a></p>
-        <p>Slides: <a href="https://mandarini.github.io/ngVPresentation" target="_blank">https://mandarini.github.io/iJSPresentation</a></p>
+        <p>Slides: <a href="https://mandarini.github.io/WeAreDevsPres" target="_blank">https://mandarini.github.io/WeAreDevsPres</a></p>
         <p>Code from presentation:<br/>
-            <a href="https://github.com/mandarini/mapp" target="_blank">https://github.com/mandarini/mapp</a></p>
+            <a href="https://github.com/mandarini/m" target="_blank">https://github.com/mandarini/m</a><br/>
+            <a href="https://github.com/mandarini/im" target="_blank">https://github.com/mandarini/im</a><br/>
+            <a href="https://github.com/mandarini/wsserver" target="_blank">https://github.com/mandarini/mapp</a>
+        </p>
     </div>
     </div>
 </div>
