--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
         <section id="slide_22"></section>
         <section id="slide_23"></section>
         <section>
-            <section id="slide_24"></section>
-            <section id="slide_25"></section>
-            <section id="slide_26"></section>
-            <section id="slide_27"></section>
-            <section id="slide_28"></section>
-            <section id="slide_29"></section>
+            <section id="slide_24" data-background="#fdfdfd"></section>
+            <section id="slide_25" data-background="#fdfdfd"></section>
+            <section id="slide_26" data-background="#fdfdfd"></section>
+            <section id="slide_27" data-background="#fdfdfd"></section>
         </section>
+        <section id="slide_28"></section>
+        <section id="slide_29"></section>
         <section id="slide_30"></section>
         <section>
             <section id="slide_31"></section>
