--- a/slides/slide_02.html
+++ b/slides/slide_02.html
@@ -1,14 +1,8 @@
 <div id="s_02">
-    <h4>a little bit about myself</h4>
-    <ul>
-      <li class="fragment">front-end web dev at <a href="http://www.upstreamsystems.com/" rel="noopener">Upstream, Greece</a></li>
-        <li class="fragment">studied spatial analysis and spatial data viz at <a href="https://www.ucl.ac.uk/bartlett/casa/" rel="noopener">CASA, UCL</a></li>
-        <li class="fragment">worked a lot with AngularJS, maps APIs and visuals</li>
-        <li class="fragment">lives in Athens, Greece</li>
-        <li class="fragment">codes with cat on lap</li>
-    </ul>
-    <div class="fragment image">
-        <img src="./images/girly.jpg" width="35%">
-        <p class="fragment caption-inside">hi there!</p>
+    <h4>my mother and her mouse</h4>
+    <p class="small-letters"><em>an inspiring tale</em></p>
+    <div class="side-pics">
+        <img src="./images/mom2.jpg" width="30%">
+        <img style="margin-left: 30px;" src="./images/mouse.jpg" width="20%">
     </div>
 </div>
