--- a/slides/slide_04.html
+++ b/slides/slide_04.html
@@ -1,11 +1,14 @@
 <div id="s_04">
-    <h4>summary</h4>
+    <h4>a little bit about myself</h4>
     <ul>
-        <li class="fragment">y u need maps?</li>
-        <li class="fragment">online map libs & what to choose</li>
-        <li class="fragment">how to integrate</li>
-        <li class="fragment">gimme teh codez!</li>
-        <li class="fragment">some data viz & examples</li>
-        <li class="fragment">map interactions</li>
+        <li class="fragment">front-end web dev at <a href="http://www.upstreamsystems.com/" rel="noopener">Upstream, Greece</a></li>
+        <li class="fragment">studied spatial analysis and spatial data viz at <a href="https://www.ucl.ac.uk/bartlett/casa/" rel="noopener">CASA, UCL</a></li>
+        <li class="fragment">worked a lot with AngularJS, maps APIs and visuals</li>
+        <li class="fragment">lives in Athens, Greece</li>
+        <li class="fragment">codes with cat on lap</li>
     </ul>
+    <div class="fragment image">
+        <img src="./images/girly.jpg" width="35%">
+        <p class="fragment caption-inside">hi there!</p>
+    </div>
 </div>
