--- a/slides/slide_05.html
+++ b/slides/slide_05.html
@@ -1,8 +1,8 @@
 <div id="s_05">
-    <h4>y u need maps</h4>
+    <h4>y do u need this?</h4>
 <ul>
-    <li>maps are everywhere (think of an app)</li>
-    <li>maps are used to show data</li>
-    <li>maps are nice and interactive</li>
+    <li class="fragment">we're making an interface that makes use of physical motion</li>
+    <li class="fragment">could be used in games (think Wii)</li>
+    <li class="fragment">could be used by people less accustomed to (or unable/less able to use) other methods of UI (mouse/trackpad/keyboard/voice/camera)</li>
 </ul>
 </div>
