--- a/slides/slide_08.html
+++ b/slides/slide_08.html
@@ -1,6 +1,7 @@
 <div id="s_08">
-    <h4>Angular integration</h4>
-    <p class="fragment">asynchronous script loading?</p>
-    <p class="fragment">synchronous script loading?</p>
-    <p class="fragment">dynamic asynchronous script loading?</p>
+    <h4>we will be using <span class="color-it">socket.io</span></h4>
+    <p>Socket.IO uses WebSockets when it can.</p>
+<p class="small-letters"><em>socket.io will use feature detection to decide if
+    the connection will be established with WebSocket,
+    AJAX long polling, Flash, etc., so our app can work everywhere.</em></p>
 </div>
