--- a/slides/slide_24.html
+++ b/slides/slide_24.html
@@ -1,9 +1,4 @@
-<div id="s_24">
-    <h4>types of data and representations</h4>
-    <p>
-        Points, polygons, points with values, clusters (heatmaps) etc.</p>
-    <p>According to the format of your data (or the story your data want to tell), you can create corresponding visuals.
-        <a href="https://blog.socialcops.com/academy/resources/7-techniques-to-visualize-geospatial-data/" target="_blank" rel="noopener">here</a> are
-        some techniques.
-    </p>
+<div id="s_24" class="white-bg">
+    <h4>connection flow</h4>
+    <img src="./images/basic_diagram.svg" width="70%"/>
 </div>
