--- a/slides/slide_25.html
+++ b/slides/slide_25.html
@@ -1,7 +1,4 @@
-<div id="s_25">
-    <p>points</p>
-    <img src="./images/masts.png" width="60%" height="60%">
-    <p class="small-letters">
-        points => mobile phone masts
-    </p>
+<div id="s_25" class="white-bg">
+    <h4>mobile device events flow</h4>
+    <img src="./images/MobileDeviceFlow.svg" width="70%"/>
 </div>
