--- a/slides/slide_27.html
+++ b/slides/slide_27.html
@@ -1,9 +1,4 @@
-<div id="s_27">
-    <p>polygons</p>
-    <img src="./images/manch.png" width="50%" height="50%">
-    <p class="small-letters">
-        polygons => Lower layer Super Output Areas (geographic areas) in Manchester </p>
-    <p class="small-letters">
-        color => loneliness and social isolation prevalence factor
-    </p>
+<div id="s_27" class="white-bg">
+    <h4>desktop/laptop event flow</h4>
+    <img style="background-color: white" src="./images/ComputerDeviceFlow.svg" width="70%"/>
 </div>
