--- a/slides/slide_55.html
+++ b/slides/slide_55.html
@@ -5,13 +5,17 @@
     </div>
     <div class="right">
 <ul class="final-list">
-    <li><a href="https://codecraft.tv/courses/angular/components/viewchildren-and-contentchildren/" target="_blank" rel="noopener">ViewChildren & ContentChildren by <a href="https://twitter.com/jawache">@jawache</a></a></li>
-    <li><a href="https://data.gov.uk/dataset/loneliness-within-lsoa" target="_blank" rel="noopener">Loneliness in LSOA</a></li>
-    <li><a href="https://data.gov.uk/dataset/choice-based-lettings-bids" target="_blank" rel="noopener">Letting bids</a></li>
-    <li><a href="https://data.gov.uk/dataset/mobile-phone-masts-in-camden" target="_blank" rel="noopener">Mobile phone masts in camden</a></li>
-    <li><a href="https://developers.google.com/maps/documentation/javascript/" target="_blank" rel="noopener">Google Maps JS API docs</a></li>
-    <li><a href="https://en.wikipedia.org/wiki/John_Snow#Cholera" target="_blank" rel="noopener">John Snow and the Soho cholera map</a></li>
-    <li><a href="https://xkcd.com/1138/" target="_blank" rel="noopener">xkcd - Heatmap</a></li>
+    <li><a href="https://socket.io/" target="_blank" rel="noopener">Socket.io</a></li>
+    <li><a href="https://developers.google.com/web/fundamentals/native-hardware/device-orientation/" target="_blank" rel="noopener">
+        Device Orientation & Motion By Pete LePage</a></li>
+    <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/DeviceMotionEvent" target="_blank" rel="noopener">DeviceMotionEvent Specs</a></li>
+    <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/DeviceOrientationEvent" target="_blank" rel="noopener">DeviceOrientationEvent Specs</a></li>
+    <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/DeviceLightEvent" target="_blank" rel="noopener">DeviceLightEvent Specs</a></li>
+    <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/DeviceProximityEvent" target="_blank" rel="noopener">DeviceProximityEvent Specs</a></li>
+    <li><a href="https://w3c.github.io/deviceorientation/spec-source-orientation.html" target="_blank" rel="noopener">W3C DeviceOrientation Event Specification</a></li>
+    <li><a href="https://davidwalsh.name/websocket" target="_blank" rel="noopener">WebSockets and Socket.IO</a></li>
+    <li><a href="https://tutorialedge.net/typescript/angular/angular-socket-io-tutorial/" target="_blank" rel="noopener">Angular and Socket.io tutorial</a>
+        by <a href="https://twitter.com/Elliot_F" target="_blank" rel="noopener">Elliot Forbes</a></li>
 </ul>
 </div>
 </div>
