--- a/slides/slide_09.html
+++ b/slides/slide_09.html
@@ -1,9 +1,11 @@
 <div id="s_09">
-    <h4>script loading</h4>
-    <p class="fragment">The maps APIs are loaded with a script.</p>
-    <p class="fragment">The script defines a global variable/object, that is the map and all its functions
-        (<span style="color:red">google.map</span>)</p>
-    <p class="fragment">There are two ways to load a script, synchronously and asynchronously:</p>
-    <p class="notes fragment"><strong>asynchronously</strong> means that your page will continue doing what a page has to do, while the script is being loaded</p>
-    <p class="notes fragment"><strong>synchronously</strong> means that your page will stop everything and wait for the script to be loaded in order to continue</p>
+    <h4>why angular?</h4>
+    <p class="fragment">you don't have to</p>
+    <p class="fragment">but we'll use it and utilize the <span class="highlighted">rxjs</span> library</p>
+    <ol class="fragment small-letters">
+        <li>rxjs Subjects are both an <span class="highlighted">Observable</span> and an <span class="highlighted">Observer</span></li>
+        <li>listen to and send messages</li>
+        <li>Subject watches websocket for incoming messages and broadcasts these messages to any components subscribed to it</li>
+    </ol>
+    <p class="small-letters fragment"><em>credit: Elliot Forbes</em></p>
 </div>
