--- a/index.html
+++ b/index.html
@@ -100,14 +100,22 @@
         <section id="slide_08"></section>
         <section id="slide_09"></section>
         <section id="slide_10"></section>
-        <section id="slide_11"></section>
-        <section id="slide_12"></section>
-        <section id="slide_13"></section>
-        <section id="slide_14"></section>
-        <section id="slide_15"></section>
-        <section id="slide_16"></section>
-        <section id="slide_17"></section>
-        <section id="slide_18"></section>
+        <section>
+            <section id="slide_11"></section>
+            <section id="slide_12"></section>
+        </section>
+        <section>
+            <section id="slide_13"></section>
+            <section id="slide_14"></section>
+        </section>
+        <section>
+            <section id="slide_15"></section>
+            <section id="slide_16"></section>
+        </section>
+        <section>
+            <section id="slide_17"></section>
+            <section id="slide_18"></section>
+        </section>
         <section id="slide_19"></section>
         <section id="slide_20"></section>
         <section id="slide_21"></section>
