--- a/slides/slide_19.html
+++ b/slides/slide_19.html
@@ -1,9 +1,4 @@
 <div id="s_19">
-<h4>show me the map already</h4>
-<p class="fragment">
-  <a href="https://mandarini.github.io/SimpleMap/" target="_blank" rel="noopener">ok!</a>
-</p>
-<iframe class="fragment" src="https://mandarini.github.io/SimpleMap/" title="iframe of plain map" width="100%" height="400">
-  <p>Your browser does not support iframes.</p>
-</iframe>
+<h4>light sensor how it works</h4>
+
 </div>
