--- a/slides/slide_21.html
+++ b/slides/slide_21.html
@@ -1,20 +1,6 @@
 <div id="s_21">
-<h4>spatial data</h4>
-<p class="small-letters parts">
-	A map is -essentially- a two dimensional representation
-	of a piece of the earth. Enriched with two dimensional representations of information about this piece of the earth.
-	Information about roads, rivers, shapes of the earth, building blocks, etc. To scale or not.
-</p>
-<div class="image">
-	<img class="fragment top-img current-visible" data-fragment-index="1" src="./images/oldmap.jpg" width="67%">
-	<p class="caption fragment current-visible" data-fragment-index="1">
-		An old map, with monsters and everything.
-	</p>
-		<img class="fragment top-img current-visible" data-fragment-index="2" src="./images/cholera.jpg" width="50%">
-		<p class="caption fragment current-visible" data-fragment-index="2">
-			John Snow, map of clusters of cholera cases in Soho in the London epidemic of 1854
-		</p>
-		<img class="fragment" data-fragment-index="3" src="./images/xkcd.png" width="50%">
-</div>
-
+	<p>images</p>
+	<iframe style="background-color: white;" src="https://mandarini.github.io/im/" width="100%" height="270">
+		<p>Your browser does not support iframes.</p>
+	</iframe>
 </div>
