--- a/slides/slide_22.html
+++ b/slides/slide_22.html
@@ -1,26 +1,4 @@
 <div id="s_22">
-	<h4>spatial data representation formats</h4>
-	<ul>
-		<li>
-			Geojson
-		</li>
-		<li>
-			json
-		</li>
-		<li>
-			csv
-		</li>
-		<li>
-			shapefile
-		</li>
-		<li>
-			kml
-		</li>
-		<li>
-			gml
-		</li>
-		<li>
-			& more
-		</li>
-	</ul>
+	<h4>proximity sensor how it works</h4>
+
 </div>
