--- a/slides/slide_29.html
+++ b/slides/slide_29.html
@@ -1,6 +1,4 @@
 <div id="s_29">
-    <p>heatmap</p>
-    <img src="./images/map_viz.png" width="70%" height="70%">
-    <p class="small-letters">
-        letting bids</p>
+<h4>calibration!</h4>
+<h6><em>for best results</em></h6>
 </div>
