--- a/slides/slide_18.html
+++ b/slides/slide_18.html
@@ -1,6 +1,8 @@
 <div id="s_18">
-    <p>images</p>
     <iframe style="background-color: white;" src="https://mandarini.github.io/im/" width="100%" height="270">
         <p>Your browser does not support iframes.</p>
     </iframe>
+    <img src="./images/photodiode.jpg" width="30%">
+<p class="caption">photodiodes
+   <em>(wikipedia)</em></p>
 </div>
