--- a/slides/slide_19.html
+++ b/slides/slide_19.html
@@ -1,4 +1,8 @@
 <div id="s_19">
-<h4>light sensor how it works</h4>
-
+<h4>how it works</h4>
+<p>It consists of a photodiode, a semiconductor device that converts light into an electrical current.
+</p>
+<p class="small">
+  <em>source: wikipedia</em>
+</p>
 </div>
