--- a/slides/slide_22.html
+++ b/slides/slide_22.html
@@ -1,4 +1,10 @@
 <div id="s_22">
-	<h4>proximity sensor how it works</h4>
-
+	<h4>how it works</h4>
+<p>
+	A proximity sensor emits an electromagnetic field or a beam of
+	 electromagnetic radiation (infrared, for instance), and looks for changes in the field or return signal.
+</p>
+<p class="small">
+  <em>source: wikipedia</em>
+</p>
 </div>
