--- a/slides/slide_33.html
+++ b/slides/slide_33.html
@@ -1,6 +1,20 @@
 <div id="s_33">
-	<p>result</p>
-    <iframe style="background-color: white;" src="https://mandarini.github.io/mapp/gmap" title="iframe example 1" width="100%" height="550">
-        <p>Your browser does not support iframes.</p>
-    </iframe>
+	<h4>beyond this</h4>
+	<h6><em>future aspirations, etc.</em></h6>
+	<ul>
+		<li class="fragment">
+			Better calibration</li>
+		<li class="fragment">
+			better support for device sensors
+		</li>
+		<li class="fragment">
+			More uses - larger scale interactions (a proper website etc)
+		</li>
+		<li class="fragment">
+			not very secure and maybe a bit inefficient, since it’s a two way route and in reality the one part only receives and the other only transmits
+		</li>
+		<li class="fragment">
+			different users are not treated differently, they could be distinguished in future demos.
+		</li>
+	</ul>
 </div>
