--- a/slides/slide_36.html
+++ b/slides/slide_36.html
@@ -1,6 +1,21 @@
 <div id="s_36">
-    <p>result</p>
-    <iframe style="background-color: white;" src="https://mandarini.github.io/mapp/gmap" title="masts" width="100%" height="550">
-        <p>Your browser does not support iframes.</p>
-    </iframe>
+  <h4>credit - sources</h4>
+  <div class="left">
+      <img src="./images/ngcat.jpg" width="100%"/>
+  </div>
+  <div class="right">
+<ul class="final-list">
+  <li><a href="https://socket.io/" target="_blank" rel="noopener">Socket.io</a></li>
+  <li><a href="https://developers.google.com/web/fundamentals/native-hardware/device-orientation/" target="_blank" rel="noopener">
+      Device Orientation & Motion By Pete LePage</a></li>
+  <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/DeviceMotionEvent" target="_blank" rel="noopener">DeviceMotionEvent Specs</a></li>
+  <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/DeviceOrientationEvent" target="_blank" rel="noopener">DeviceOrientationEvent Specs</a></li>
+  <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/DeviceLightEvent" target="_blank" rel="noopener">DeviceLightEvent Specs</a></li>
+  <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/DeviceProximityEvent" target="_blank" rel="noopener">DeviceProximityEvent Specs</a></li>
+  <li><a href="https://w3c.github.io/deviceorientation/spec-source-orientation.html" target="_blank" rel="noopener">W3C DeviceOrientation Event Specification</a></li>
+  <li><a href="https://davidwalsh.name/websocket" target="_blank" rel="noopener">WebSockets and Socket.IO</a></li>
+  <li><a href="https://tutorialedge.net/typescript/angular/angular-socket-io-tutorial/" target="_blank" rel="noopener">Angular and Socket.io tutorial</a>
+      by <a href="https://twitter.com/Elliot_F" target="_blank" rel="noopener">Elliot Forbes</a></li>
+</ul>
+</div>
 </div>
