--- a/slides/slide_35.html
+++ b/slides/slide_35.html
@@ -15,7 +15,7 @@
       <p>Code from presentation:<br/>
           <a href="https://github.com/mandarini/m" target="_blank">https://github.com/mandarini/m</a><br/>
           <a href="https://github.com/mandarini/im" target="_blank">https://github.com/mandarini/im</a><br/>
-          <a href="https://github.com/mandarini/wsserver" target="_blank">https://github.com/mandarini/mapp</a>
+          <a href="https://github.com/mandarini/wsserver" target="_blank">https://github.com/mandarini/wsserver</a>
       </p>
   </div>
   </div>
